Travis: Try gcc6

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: rust
 rust:
     - nightly
 compiler:
-    - clang
-env:
-    - CXX=clang++
+    - g++-6
+addons:
+    apt:
+        sources:
+            - ubuntu-toolchain-r-test
+        packages:
+            - g++-6
